dark mode bug fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@ a {
   display: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -56,7 +56,7 @@ a {
     color: white;
     background: black;
   }
-}
+} */
 
 .textCenter {
   text-align: center;
